tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax10/Test.java
public class Test {
	public interface A {
		static boolean equals(Object o);
	}
}